force-app/main/default/objects/ProfitLoss__c/ProfitLoss__c.object-meta.xml
<CustomObject>
    <label>ProfitLoss</label>
    <nameField>
        <displayFormat>PL-{YYYY}{MM}{000000}</displayFormat>
        <label>ProfitLoss No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfitLoss</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>