force-app/main/default/objects/ProfitLoss__c/fields/BACode__c.field-meta.xml
<CustomField>
    <fullName>BACode__c</fullName>
    <label>BA Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>