force-app/main/default/objects/ProfitLoss__c/fields/BALANCE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>BALANCE_FLAG__c</fullName>
    <label>BALANCE_FLAG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>