force-app/main/default/objects/ProfitLoss__c/fields/BAName__c.field-meta.xml
<CustomField>
    <fullName>BAName__c</fullName>
    <label>BA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>