force-app/main/default/objects/ProfitLoss__c/fields/BizType1__c.field-meta.xml
<CustomField>
    <fullName>BizType1__c</fullName>
    <label>Biz Type1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>