force-app/main/default/objects/ProfitLoss__c/fields/BizType2__c.field-meta.xml
<CustomField>
    <fullName>BizType2__c</fullName>
    <label>Biz Type2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>