force-app/main/default/objects/ProfitLoss__c/fields/BizType__c.field-meta.xml
<CustomField>
    <fullName>BizType__c</fullName>
    <label>Biz Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>