force-app/main/default/objects/ProfitLoss__c/fields/BizTypeName__c.field-meta.xml
<CustomField>
    <fullName>BizTypeName__c</fullName>
    <label>Biz Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>