force-app/main/default/objects/ProfitLoss__c/fields/BizYear__c.field-meta.xml
<CustomField>
    <fullName>BizYear__c</fullName>
    <label>Biz Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>