force-app/main/default/objects/ProfitLoss__c/fields/Contract01__c.field-meta.xml
<CustomField>
    <fullName>Contract01__c</fullName>
    <description>01월 수주</description>
    <label>Contract01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>