force-app/main/default/objects/ProfitLoss__c/fields/Contract02__c.field-meta.xml
<CustomField>
    <fullName>Contract02__c</fullName>
    <description>02월 수주</description>
    <label>Contract02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>