force-app/main/default/objects/ProfitLoss__c/fields/Contract03__c.field-meta.xml
<CustomField>
    <fullName>Contract03__c</fullName>
    <description>03월 수주</description>
    <label>Contract03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>