force-app/main/default/objects/ProfitLoss__c/fields/DeliveryDeptL1__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptL1__c</fullName>
    <label>Delivery Dept L1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>