force-app/main/default/objects/ProfitLoss__c/fields/DeliveryDeptL2__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptL2__c</fullName>
    <label>Delivery Dept L2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>