force-app/main/default/objects/ProfitLoss__c/fields/DeliveryDeptL3__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptL3__c</fullName>
    <label>Delivery Dept L3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>