force-app/main/default/objects/ProfitLoss__c/fields/DeliveryDeptName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptName__c</fullName>
    <label>Delivery Dept Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>