force-app/main/default/objects/ProfitLoss__c/fields/DeliveryDeptNameL2__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptNameL2__c</fullName>
    <label>Delivery Dept Name L2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>