force-app/main/default/objects/ProfitLoss__c/fields/DeliveryDeptNameL3__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptNameL3__c</fullName>
    <label>Delivery Dept Name L3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>