force-app/main/default/objects/ProfitLoss__c/fields/DeliveryDeptNameL4__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptNameL4__c</fullName>
    <label>Delivery Dept Name L4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>