force-app/main/default/objects/ProfitLoss__c/fields/DivisionRC__c.field-meta.xml
<CustomField>
    <fullName>DivisionRC__c</fullName>
    <label>Division RC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>