force-app/main/default/objects/ProfitLoss__c/fields/GroupInOut__c.field-meta.xml
<CustomField>
    <fullName>GroupInOut__c</fullName>
    <label>Group InOut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>