force-app/main/default/objects/ProfitLoss__c/fields/LocalInternational__c.field-meta.xml
<CustomField>
    <fullName>LocalInternational__c</fullName>
    <label>Local International</label>
    <length>255</length>
    <type>Text</type>
</CustomField>