force-app/main/default/objects/ProfitLoss__c/fields/Minus__c.field-meta.xml
<CustomField>
    <fullName>Minus__c</fullName>
    <label>Minus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>