force-app/main/default/objects/ProfitLoss__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>