force-app/main/default/objects/ProfitLoss__c/fields/OriginAccount__c.field-meta.xml
<CustomField>
    <fullName>OriginAccount__c</fullName>
    <label>Origin Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>