force-app/main/default/objects/ProfitLoss__c/fields/Profit01__c.field-meta.xml
<CustomField>
    <fullName>Profit01__c</fullName>
    <description>01월 영업이익</description>
    <label>Profit01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>