force-app/main/default/objects/ProfitLoss__c/fields/Profit02__c.field-meta.xml
<CustomField>
    <fullName>Profit02__c</fullName>
    <description>02월 영업이익</description>
    <label>Profit02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>