force-app/main/default/objects/ProfitLoss__c/fields/Profit03__c.field-meta.xml
<CustomField>
    <fullName>Profit03__c</fullName>
    <description>03월 영업이익</description>
    <label>Profit03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>