force-app/main/default/objects/ProfitLoss__c/fields/REAL_FLAG2__c.field-meta.xml
<CustomField>
    <fullName>REAL_FLAG2__c</fullName>
    <label>REAL_FLAG2</label>
    <length>1</length>
    <type>Text</type>
</CustomField>