force-app/main/default/objects/ProfitLoss__c/fields/RegionCode__c.field-meta.xml
<CustomField>
    <fullName>RegionCode__c</fullName>
    <label>Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>