force-app/main/default/objects/ProfitLoss__c/fields/RegionName__c.field-meta.xml
<CustomField>
    <fullName>RegionName__c</fullName>
    <label>Region Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>