force-app/main/default/objects/ProfitLoss__c/fields/Revenue01__c.field-meta.xml
<CustomField>
    <fullName>Revenue01__c</fullName>
    <description>01월 매출</description>
    <label>Revenue01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>