force-app/main/default/objects/ProfitLoss__c/fields/Revenue02__c.field-meta.xml
<CustomField>
    <fullName>Revenue02__c</fullName>
    <description>02월 매출</description>
    <label>Revenue02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>