force-app/main/default/objects/ProfitLoss__c/fields/Revenue03__c.field-meta.xml
<CustomField>
    <fullName>Revenue03__c</fullName>
    <description>03월 매출</description>
    <label>Revenue03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>