force-app/main/default/objects/ProfitLoss__c/fields/SalesDeptL1__c.field-meta.xml
<CustomField>
    <fullName>SalesDeptL1__c</fullName>
    <label>Sales Dept L1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>