force-app/main/default/objects/ProfitLoss__c/fields/SalesDeptL2__c.field-meta.xml
<CustomField>
    <fullName>SalesDeptL2__c</fullName>
    <label>Sales Dept L2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>