force-app/main/default/objects/ProfitLoss__c/fields/SalesDeptL3__c.field-meta.xml
<CustomField>
    <fullName>SalesDeptL3__c</fullName>
    <label>Sales Dept L3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>