force-app/main/default/objects/ProfitLoss__c/fields/SalesDeptNameL1__c.field-meta.xml
<CustomField>
    <fullName>SalesDeptNameL1__c</fullName>
    <label>Sales Dept Name L1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>