force-app/main/default/objects/ProfitLoss__c/fields/SalesDeptNameL2__c.field-meta.xml
<CustomField>
    <fullName>SalesDeptNameL2__c</fullName>
    <label>Sales Dept Name L2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>