force-app/main/default/objects/ProfitLoss__c/fields/SalesDeptNameL3__c.field-meta.xml
<CustomField>
    <fullName>SalesDeptNameL3__c</fullName>
    <label>Sales Dept Name L3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>