force-app/main/default/objects/ProfitLoss__c/fields/SolutionCode__c.field-meta.xml
<CustomField>
    <fullName>SolutionCode__c</fullName>
    <label>Solution Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>