force-app/main/default/objects/ProfitLoss__c/fields/SolutionName__c.field-meta.xml
<CustomField>
    <fullName>SolutionName__c</fullName>
    <label>Solution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>