force-app/main/default/objects/ProfitLoss__c/fields/StndCustCode__c.field-meta.xml
<CustomField>
    <fullName>StndCustCode__c</fullName>
    <label>Standard Cust Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>