force-app/main/default/objects/ProfitLoss__c/fields/StndCustName__c.field-meta.xml
<CustomField>
    <fullName>StndCustName__c</fullName>
    <label>Standard Cust Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>