force-app/main/default/objects/ProfitLoss__c/fields/Sum_of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Revenue__c</fullName>
    <formula>Revenue01__c + 
Revenue02__c + 
Revenue03__c + 
Revenue04__c + 
Revenue05__c + 
Revenue06__c + 
Revenue07__c + 
Revenue08__c + 
Revenue09__c + 
Revenue10__c + 
Revenue11__c + 
Revenue12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>