force-app/main/default/objects/ProfitLoss__c/fields/TeamRC__c.field-meta.xml
<CustomField>
    <fullName>TeamRC__c</fullName>
    <label>Team RC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>