force-app/main/default/objects/ProfitLoss__c/fields/VersionName__c.field-meta.xml
<CustomField>
    <fullName>VersionName__c</fullName>
    <label>Version Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>