force-app/main/default/objects/ProfitLoss__c/fields/WBSCode__c.field-meta.xml
<CustomField>
    <fullName>WBSCode__c</fullName>
    <label>WBS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>