force-app/main/default/objects/ProfitLoss__c/fields/WBSName__c.field-meta.xml
<CustomField>
    <fullName>WBSName__c</fullName>
    <label>WBS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>